--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.2.2
-python-docx==0.8.11
-openai==0.27.0
-werkzeug==2.2.2
+Flask==2.3.3
+flask-cors==4.0.0
+python-docx==1.1.0
+boto3==1.34.59
+PyPDF2==3.0.1
